--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     >
   </head>
   <body class="page">
-    <header class="header page__header">
+    <header class="header page__header" id="about">
       <img
         src="images/gallery/NAMU.jpg"
         alt="NAMU"
@@ -125,7 +125,7 @@
     </div>
 
     <main class="page__main">
-      <section class="events page__events">
+      <section class="events page__events" id="exhibition">
         <h2 class="events__title">Актуальні події</h2>
 
         <div class="events__block">
@@ -191,7 +191,7 @@
         </div>
       </section>
 
-      <section class="gallery page__gallery">
+      <section class="gallery page__gallery" id="gallery">
         <h2 class="gallery__title">Галерея</h2>
 
         <div class="gallery__block">
@@ -342,39 +342,109 @@
       </section>
     </main>
 
-    <footer class="footer page__footer">
-      <div class="footer__top">
-        <a href="#" class="footer__logo">
-          NA
-          <br>
-          MU
-        </a>
-
-        <div class="footer__socials">
-          <a
-            href="https://www.facebook.com/namu.museum/"
-            class="footer__icon footer__icon--facebook"
-            target="_blank"
-          ></a>
-
-          <a
-            href="https://www.instagram.com/namu.museum/"
-            class="footer__icon footer__icon--instagram"
-            target="_blank"
-          ></a>
+    <footer class="footer page__footer" id="contacts">
+      <div class="footer__grid">
+        <div class="footer__top">
+          <a href="#" class="footer__logo">
+            NA
+            <br>
+            MU
+          </a>
+          <div class="footer__socials">
+            <a
+              href="https://www.facebook.com/namu.museum/"
+              class="footer__icon footer__icon--facebook"
+              target="_blank"
+            ></a>
+            <a
+              href="https://www.instagram.com/namu.museum/"
+              class="footer__icon footer__icon--instagram"
+              target="_blank"
+            ></a>
+          </div>
         </div>
-      </div>
-
-      <div class="footer__middle">
-
-      </div>
-
-      <div class="footer__nav">
-
+        <div class="footer__middle">
+          <div class="footer__shedule">
+            <p class="footer__subtitle">
+              Графік роботи
+            </p>
+            <p class="footer__text">
+              <span class="footer__time">12:00 — 20:00</span> середа
+              <br>
+              <span class="footer__time">12:00 — 20:00</span> четвер
+              <br>
+              <span class="footer__time">12:00 — 20:00</span> п’ятниця
+              <br>
+              <span class="footer__time">11:00 — 19:00</span> субота
+              <br>
+              <span class="footer__time">11:00 — 19:00</span> неділя
+              <br>
+              <br>
+              <span class="footer__time">Вихідні:</span> понеділок, вівторок
+              <br>
+              Каса припиняє роботу за 1 годину
+              до закриття музею
+            </p>
+          </div>
+          <div class="footer__contacts">
+            <p class="footer__subtitle">
+              Контакти:
+            </p>
+            <p class="footer__text">
+              вул. М. Грушевського, 6; Київ, 01001
+              <br>
+              тел. +38 (044) 278-13-57
+              <br>
+              факс +38 (044) 278-74-54
+              <br>
+              e-mail: info@namu.kiev.ua
+            </p>
+          </div>
+        </div>
+        <div class="footer__button-container">
+          <a href="#" class="footer__button">
+            <img
+              src="images/icons/green-arrow.svg"
+              alt="Tickets"
+              class="footer__arrow"
+            >
+          </a>
+        </div>
+        <div class="footer__line"></div>
+        <nav class="nav footer__nav">
+          <ul class="nav__list nav__list--footer">
+            <li class="nav__item nav__item--footer">
+              <a href="#gallery" class="nav__link nav__link--footer">
+                Галерея
+              </a>
+            </li>
+            <li class="nav__item nav__item--footer">
+              <a href="#about" class="nav__link nav__link--footer">
+                Про Нас
+              </a>
+            </li>
+            <li class="nav__item nav__item--footer">
+              <a href="#exhibition" class="nav__link nav__link--footer">
+                Виставки та події
+              </a>
+            </li>
+            <li class="nav__item nav__item--footer">
+              <a href="#contacts" class="nav__link nav__link--footer">
+                Контакти
+              </a>
+            </li>
+          </ul>
+        </nav>
       </div>
 
       <div class="footer__copyright">
+        <p class="footer__copyright-text">
+          Designed by Zhyriada Marina
+        </p>
 
+        <p class="footer__copyright-text">
+          Copyright © 2019. All Rights Reserved.
+        </p>
       </div>
     </footer>
 
