--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     >
   </head>
   <body class="page">
-    <header class="header page__header" id="about">
+    <header class="header page__header">
       <img
         src="images/gallery/NAMU.jpg"
         alt="NAMU"
@@ -38,7 +38,7 @@
         ХУДОЖНІЙ МУЗЕЙ
       </h1>
 
-      <a href="#" class="header__link">
+      <a href="#exhibition" class="header__link">
         <p class="header__text">
           КВИТКИ
         </p>
@@ -302,7 +302,7 @@
         </div>
       </section>
 
-      <section class="subscription">
+      <section class="subscription" id="about">
         <div class="subscription__text">
           <h2 class="subscription__title">Підписка</h2>
 
