--- a/src/index.html
+++ b/src/index.html
@@ -266,7 +266,7 @@
         </div>
         <div class="lecture__description">
           <div class="events__tags">
-            <div class="events__type lecture__type">
+            <div class="lecture__type">
               Лекція
             </div>
             <div class="lecture__date">
