--- a/src/index.html
+++ b/src/index.html
@@ -52,9 +52,9 @@
         </div>
       </a>
 
-      <h4 class="header__subtitle">
+      <a href="#exhibition" class="header__subtitle">
         ПОДІЇ
-      </h4>
+      </a>
     </header>
 
     <div class="menu page-menu" id="nav">
