--- a/src/index.html
+++ b/src/index.html
@@ -395,15 +395,39 @@
               Контакти:
             </p>
 
-            <p class="footer__text">
-              вул. М. Грушевського, 6; Київ, 01001
-              <br>
-              тел. +38 (044) 278-13-57
-              <br>
-              факс +38 (044) 278-74-54
-              <br>
-              e-mail: info@namu.kiev.ua
-            </p>
+            <div class="footer__text">
+              <a
+                href="https://goo.gl/maps/rnVRwCpzyfbPPa6z6"
+                class="footer__link"
+                target="_blank"
+              >
+                вул. М. Грушевського, 6; Київ, 01001
+              </a>
+
+              <a
+                href="tel:+38 (044) 278-13-57"
+                class="footer__link"
+                target="_blank"
+              >
+                тел. +38 (044) 278-13-57
+              </a>
+
+              <a
+                href="tel:+38 (044) 278-74-54"
+                class="footer__link"
+                target="_blank"
+              >
+                факс +38 (044) 278-74-54
+              </ahref=>
+
+              <a
+                href="mailto:info@namu.kiev.ua"
+                class="footer__link"
+                target="_blank"
+              >
+                e-mail: info@namu.kiev.ua
+              </ahref=>
+            </div>
           </div>
         </div>
 
@@ -438,7 +462,7 @@
                 Виставки та події
               </a>
             </li>
-            
+
             <li class="nav__item nav__item--footer">
               <a href="#contacts" class="nav__link nav__link--footer">
                 Контакти
