added block 'gallery'

--- a/src/index.html
+++ b/src/index.html
@@ -164,5 +164,50 @@
         </h2>
       </div>
     </div>
+
+    <div class="page__section" id="gallery">
+      <div class="container">
+        <div class="page__section-title">
+          Галерея
+        </div>
+
+        <div class="gallery">
+          <div class="gallery__content">
+            <div class="gallery__photo">
+              <img
+                src="./images/photos/image_1.png"
+                alt="image 1"
+                class="gallery__image"
+              >
+
+              <img
+                src="./images/photos/image_2.png"
+                alt="image 2"
+                class="gallery__image"
+              >
+
+              <img
+                src="./images/photos/image_3.png"
+                alt="image 3"
+                class="gallery__image gallery__image--size"
+              >
+
+              <img
+                src="./images/photos/image_4.png"
+                alt="image 4"
+                class="gallery__image gallery__image--size"
+              >
+            </div>
+
+            <div class="gallery__navigation">
+              <span class="gallery__dot"></span>
+              <span class="gallery__dot"></span>
+              <span class="gallery__dot"></span>
+              <span class="gallery__dot"></span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
