--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
               Художній музей
             </h1>
             <div class="button">
-              <div class="button__first-section">Квитки</div>
+              <a href="#events" class="button__first-section">Квитки</a>
 
               <a href="#events" class="button__second-section">
                 <div class="button__arow"></div>
@@ -347,6 +347,7 @@
         ">
           <div class="footer__top">
             <a href="#header" class="footer__logo"></a>
+            
             <div class="footer__item">
               <a
                 href="https://uk-ua.facebook.com/"
