--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Title</title>
     <link rel="stylesheet" href="./styles/main.scss">
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <script
+      defer
+      type="text/javascript"
+      src="scripts/main.js"
+    ></script>
   </head>
   <body class="page__body">
     <header class="header page__header">
@@ -23,7 +27,7 @@
             <h1 class="art-museum__title">Художній музей</h1>
 
             <div class="art-museum__button">
-              <p class="art-museum__text">квитки</p>
+              <p class="art-museum__text">Квитки</p>
 
               <div class="button button--first-type"></div>
             </div>
@@ -206,6 +210,32 @@
               <span class="gallery__dot"></span>
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="page__section" id="subscription">
+      <div class="subscription">
+        <div class="subscription__content">
+          <h2 class="subscription__title">Підписка</h2>
+          <div class="subscription__information">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </div>
+
+          <form
+            action="/"
+            method="get"
+            class="subscription__form myForm"
+          >
+            <input
+              name="email"
+              type="email"
+              class="subscription__text"
+              placeholder="E-mail"
+            >
+
+            <button class="subscription__button button button--second-type" type="submit"></button>
+          </form>
         </div>
       </div>
     </div>
