--- a/src/index.html
+++ b/src/index.html
@@ -239,5 +239,114 @@
         </div>
       </div>
     </div>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__content">
+          <div class="footer__main">
+            <div class="footer__icons">
+              <div class="footer__logo">
+                <img
+                  src="./images/logo2.svg"
+                  alt="logo"
+                  class="footer__image"
+                >
+              </div>
+              <div class="footer__share">
+                <div class="footer__facebook"></div>
+                <div class="footer__instagram"></div>
+              </div>
+            </div>
+
+            <div class="footer__information">
+              <div class="footer__top">
+                <div class="footer__schedule">
+                  <div class="information footer__same-blocks">
+                    <h2 class="information__title">Графік роботи</h2>
+                    <div class="information__content information__content--footer">
+                      <ul class="information__list information__list--footer-gap">
+                        <li class="information__item">середа</li>
+                        <li class="information__item">четвер</li>
+                        <li class="information__item">п'ятниця</li>
+                        <li class="information__item">субота</li>
+                        <li class="information__item">неділя</li>
+                      </ul>
+                      <p class="information__text information__text--footer">
+                         понеділок, вівторок
+                        <br>
+                        Каса припиняє роботу за 1 годину до закриття музею
+                      </p>
+                    </div>
+                  </div>
+
+                  <div class="contacts footer__same-blocks">
+                    <h3 class="contacts__title">Контакти:</h3>
+                    <div class="contacts__content">
+                      <a
+                        href="https://goo.gl/maps/6xDPjE9E4PcwdF2a6"
+                        target="_blank"
+                        class="contacts__link"
+                      >
+                        вул. М. Грушевського, 6; Київ, 01001
+                      </a>
+
+                      <a href="tel:+38(044)278-13-57" class="contacts__link">
+                        тел. +38 (044) 278-13-57
+                      </a>
+
+                      <a href="tel:+38(044)278-74-54" class="contacts__link">
+                        факс +38 (044) 278-74-54
+                      </a>
+
+                      <a href="mailto:info@namu.kiev.ua" class="contacts__link">
+                        e-mail: info@namu.kiev.ua
+                      </a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="footer__button">
+                  <a href="#" class="footer__circle"></a>
+                </div>
+              </div>
+
+              <div class="footer__line">
+
+              </div>
+
+              <div class="footer__bottom">
+                <ul class="navigation footer__navigation">
+                  <li class="navigation__item navigation__item--size">
+                    <a href="#" class="navigation__link navigation__link--footer">Галерея</a>
+                  </li>
+
+                  <li class="navigation__item navigation__item--size">
+                    <a href="#" class="navigation__link navigation__link--footer">Про Нас</a>
+                  </li>
+
+                  <li class="navigation__item navigation__item--size">
+                    <a href="#" class="navigation__link navigation__link--footer">Виставки та події</a>
+                  </li>
+
+                  <li class="navigation__item navigation__item--size">
+                    <a href="#" class="navigation__link navigation__link--footer">Контакти</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+
+          <div class="footer__secondary">
+            <p class="footer__text">
+              Designed by Zhyriada Marina
+            </p>
+
+            <p class="footer__text">
+              Copyright © 2019. All Rights Reserved.
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
