--- a/src/index.html
+++ b/src/index.html
@@ -199,7 +199,7 @@
               >
             </div>
 
-            <div class="slider__image slider__image--grid-second">
+            <div class="slider__image slider__image--grid-second slider__image--tablet-hidden">
               <img
                 class="slider__img"
                 src="./images/picture3.jpg"
@@ -207,7 +207,7 @@
               >
             </div>
 
-            <div class="slider__image slider__image--grid-third">
+            <div class="slider__image slider__image--grid-third slider__image--tablet-hidden">
               <img
                 class="slider__img"
                 src="./images/picture2.jpg"
@@ -215,7 +215,7 @@
               >
             </div>
 
-            <div class="slider__image slider__image--grid-fourth">
+            <div class="slider__image slider__image--grid-fourth slider__image--tablet-hidden">
               <img
                 class="slider__img"
                 src="./images/picture1.jpg"
@@ -270,71 +270,72 @@
     </main>
 
     <nav class="page__menu menu" id="menu">
-      <div class="grid grid--tablet">
-        <div class="
-          grid__item
-          grid__item--tablet-1-3
-          grid__item--desctop-1-5"
-        >
-          <div class="menu__top">
-            <div class="menu__cross-container">
-              <a
-                href="#header"
-                class="menu__cross icon icon--cross"
-              ></a>
-            </div>
-
-            <div class="grid grid--menu">
-              <a href="#gallery" class="menu__link">
-                Галерея
-              </a>
-              <a href="#footer" class="menu__link">
-                Про Нас
-              </a>
-              <a href="#events" class="menu__link">
-                Виставки та події
-              </a>
-              <a href="#footer" class="menu__link">
-                Контакти
-              </a>
+      <div class="menu__section">
+        <div class="grid grid--tablet">
+          <div class="
+            grid__item
+            grid__item--tablet-1-3
+            grid__item--desctop-1-5"
+          >
+            <div class="menu__top">
+              <div class="menu__cross-container">
+                <a
+                  href="#header"
+                  class="menu__cross icon icon--cross"
+                ></a>
+              </div>
+              <div class="grid grid--menu">
+                <a href="#gallery" class="menu__link">
+                  Галерея
+                </a>
+                <a href="#footer" class="menu__link">
+                  Про Нас
+                </a>
+                <a href="#events" class="menu__link">
+                  Виставки та події
+                </a>
+                <a href="#footer" class="menu__link">
+                  Контакти
+                </a>
+              </div>
             </div>
           </div>
-        </div>
-
-        <div class="
-          grid__item
-          grid__item--tablet-4-6
-          grid__item--desctop-8-11"
-        >
-          <div class="menu__container">
-            <div class="menu__content menu__content--first">
-              <h5 class="menu__title">
-                Графік роботи
-              </h5>
-              <p class="menu__text">
-                <strong>12:00 — 20:00</strong>
-                середа<br>
-                <strong>12:00 — 20:00</strong>
-                четвер<br>
-                <strong>12:00 — 20:00</strong>
-                п’ятниця<br>
-                <strong>11:00 — 19:00</strong>
-                субота<br>
-                <strong>11:00 — 19:00</strong>
-                неділя<br>
-              </p>
-            </div>
-
-            <div class="menu__content menu__content--second">
-              <p class="menu__text">
-                <strong>Вихідні:</strong> понеділок, вівторок<br>
-                Каса припиняє роботу за 1 годину
-                до закриття музею
-              </p>
+          <div class="
+            grid__item
+            grid__item--tablet-4-6
+            grid__item--desctop-8-11"
+          >
+            <div class="menu__container">
+              <div class="menu__content menu__content--first">
+                <h5 class="menu__title">
+                  Графік роботи
+                </h5>
+                <p class="menu__text">
+                  <strong>12:00 — 20:00</strong>
+                  середа<br>
+                  <strong>12:00 — 20:00</strong>
+                  четвер<br>
+                  <strong>12:00 — 20:00</strong>
+                  п’ятниця<br>
+                  <strong>11:00 — 19:00</strong>
+                  субота<br>
+                  <strong>11:00 — 19:00</strong>
+                  неділя<br>
+                </p>
+              </div>
+              <div class="menu__content menu__content--second">
+                <p class="menu__text">
+                  <strong>Вихідні:</strong> понеділок, вівторок<br>
+                  Каса припиняє роботу за 1 годину
+                  до закриття музею
+                </p>
+              </div>
             </div>
           </div>
         </div>
       </div>
+
+      <div class="menu__section menu__section--second"></div>
     </nav>
 
     <footer class="page__footer footer" id="footer">
@@ -347,7 +348,7 @@
         ">
           <div class="footer__top">
             <a href="#header" class="footer__logo"></a>
-            
+
             <div class="footer__item">
               <a
                 href="https://uk-ua.facebook.com/"
