added some changes

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Namu</title>
+    <link rel="icon" href="./images/logo.svg">
     <link rel="stylesheet" href="./styles/main.scss">
     <script
       defer
@@ -19,18 +20,18 @@
 
           <div class="header__block">
             <div class="header__image">
-              <a class="header__logo"></a>
+              <a href="#" class="header__logo"></a>
             </div>
           </div>
 
           <div class="art-museum">
             <h1 class="art-museum__title">Художній музей</h1>
 
-            <div class="art-museum__button">
+            <a href="#events" class="art-museum__button">
               <p class="art-museum__text">Квитки</p>
 
               <div class="button button--first-type"></div>
-            </div>
+            </a>
 
             <div class="art-museum__detail">
               <div class="art-museum__line"></div>
@@ -52,16 +53,16 @@
 
             <ul class="navigation">
               <li class="navigation__item">
-                <a href="#" class="navigation__link">Галерея</a>
+                <a href="#gallery" class="navigation__link">Галерея</a>
               </li>
               <li class="navigation__item">
-                <a href="#" class="navigation__link">Про Нас</a>
+                <a href="#subscription" class="navigation__link">Про Нас</a>
               </li>
               <li class="navigation__item">
-                <a href="#" class="navigation__link">Виставки та події</a>
+                <a href="#events" class="navigation__link">Виставки та події</a>
               </li>
               <li class="navigation__item">
-                <a href="#" class="navigation__link">Контакти</a>
+                <a href="#contacts" class="navigation__link">Контакти</a>
               </li>
             </ul>
           </div>
@@ -232,6 +233,7 @@
               type="email"
               class="subscription__text"
               placeholder="E-mail"
+              required
             >
 
             <button class="subscription__button button button--second-type" type="submit"></button>
@@ -240,21 +242,25 @@
       </div>
     </div>
 
-    <footer class="footer">
+    <footer class="footer" id="contacts">
       <div class="container">
         <div class="footer__content">
           <div class="footer__main">
             <div class="footer__icons">
               <div class="footer__logo">
-                <img
-                  src="./images/logo2.svg"
-                  alt="logo"
-                  class="footer__image"
-                >
+                <a href="#" class="footer__image"></a>
               </div>
               <div class="footer__share">
-                <div class="footer__facebook"></div>
-                <div class="footer__instagram"></div>
+                <a
+                  href="https://www.facebook.com/namu.museum/?locale=ru_RU"
+                  class="footer__facebook"
+                  target="_blank"
+                ></a>
+                <a
+                  href="https://www.instagram.com/namu.museum/"
+                  class="footer__instagram"
+                  target="_blank"
+                ></a>
               </div>
             </div>
 
@@ -317,19 +323,19 @@
               <div class="footer__bottom">
                 <ul class="navigation footer__navigation">
                   <li class="navigation__item navigation__item--size">
-                    <a href="#" class="navigation__link navigation__link--footer">Галерея</a>
+                    <a href="#gallery" class="navigation__link navigation__link--footer">Галерея</a>
                   </li>
 
                   <li class="navigation__item navigation__item--size">
-                    <a href="#" class="navigation__link navigation__link--footer">Про Нас</a>
+                    <a href="#subscription" class="navigation__link navigation__link--footer">Про Нас</a>
                   </li>
 
                   <li class="navigation__item navigation__item--size">
-                    <a href="#" class="navigation__link navigation__link--footer">Виставки та події</a>
+                    <a href="#events" class="navigation__link navigation__link--footer">Виставки та події</a>
                   </li>
 
                   <li class="navigation__item navigation__item--size">
-                    <a href="#" class="navigation__link navigation__link--footer">Контакти</a>
+                    <a href="#contacts" class="navigation__link navigation__link--footer">Контакти</a>
                   </li>
                 </ul>
               </div>
