--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,495 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
     <link rel="stylesheet" href="./styles/main.scss">
-  </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+    <link
+      rel="shortcut icon"
+      href="./images/favicon.png"
+      type="image/x-icon"
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;600&family=Montserrat:wght@400;700&display=swap"
+      rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
+
+
+  </head>
+
+  <body class="page__body">
+    <header class="page__section header">
+      <div class="container">
+        <div class="header__top-content">
+          <div class="header__icon">
+            <a href="#menu">
+              <img
+                src="./images/menu.svg"
+                alt="menu"
+                class="icon__menu"
+              >
+            </a>
+          </div>
+
+          <div class="header__logo">
+            <a href="#home">
+              <img src="./images/logo_header.png" alt="logo NAMU">
+            </a>
+          </div>
+        </div>
+
+        <div class="grid grid--mobile">
+          <div class="grid__item  grid__item--desktop-6-12 grid__item--tablet-4-6">
+            <div class="header__top">
+            </div>
+          </div>
+
+          <div class="grid__item grid__item--desktop-1-5 grid__item--tablet-1-3 grid__item--row ">
+            <h1 class="header__text">
+              ХУДОЖНІЙ
+              <br>
+              МУЗЕЙ
+            </h1>
+            <div class="header__sendform">
+              <div class="header__tickets">
+                КВИТКИ
+              </div>
+              <a href="#" class="header__button">
+                <img
+                  src="./images/Vector.png"
+                  alt="vector"
+                  class="header__button--vector"
+                >
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <nav class="page__menu menu" id="menu">
+      <div class="container">
+        <div class="menu__box">
+          <div class="menu__closed">
+            <a href="#">
+              <img
+                src="./images/menu_closed.png"
+                alt="menu closed"
+                class="icon"
+              >
+            </a>
+
+            <div class="menu__galery">
+              <a href="#galery" class="link">
+                Галерея
+              </a>
+              <a href="#events" class="link">
+                Виставки та події
+              </a>
+            </div>
+
+            <div class="menu__about">
+              <a href="https://en.wikipedia.org/wiki/National_Art_Museum_of_Ukraine"
+              class="link"
+              >
+                Про Нас
+              </a>
+              <a href="#contacts" class="link">
+                Контакти
+              </a>
+            </div>
+          </div>
+
+          <div class="menu__line"></div>
+
+          <div class="menu__opening-horse">
+            <p class="menu__opening-horse--title">
+              Графік роботи
+            </p>
+
+            <div class="menu__opening-horse--block">
+              <ul class="menu__opening-horse--text">
+                <li>
+                  <span class="menu__opening-horse--bold">12:00 — 20:00</span>
+                   середа
+                </li>
+
+                <li>
+                  <span class="menu__opening-horse--bold">12:00 — 20:00</span>
+                  четвер
+                </li>
+
+                <li>
+                  <span class="menu__opening-horse--bold">12:00 — 20:00</span>
+                  п’ятниця
+                </li>
+
+                <li>
+                  <span class="menu__opening-horse--bold">11:00 — 19:00</span>
+                   субота
+                </li>
+
+                <li>
+                  <span class="menu__opening-horse--bold">11:00 — 19:00</span>
+                  неділя
+                </li>
+              </ul>
+
+              <p class="menu__opening-horse--free-time">
+                <span class="menu__opening-horse--bold"> Вихідні:</span>
+                понеділок, вівторок
+                <br>
+                Каса припиняє роботу за 1 годину до
+
+                закриття музею
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+
+    <main>
+      <section class="current-events" id="events">
+        <div class="container__current-events">
+          <h2 class="current-events__title">
+            Актуальні події
+          </h2>
+
+          <div class="grid grid--tablet">
+            <div class="grid__item grid__item--desktop-1-7">
+              <img
+                src="./images/photos/picture_action1.png"
+                alt="go and come back"
+                class="current-events__image"
+              >
+            </div>
+
+            <div class="grid__item grid__item--desktop-9-12">
+              <div class="current-events__description">
+                <div class="current-events__exhibition">
+                  <p class="current-events__exhibition--text">виставка</p>
+                  <p class="current-events__exhibition--date">26.08-29.11.2019</p>
+                </div>
+                <div class="current-events__description-block">
+                  <h3 class="current-events__description-block--title">
+                    Йду і повертаюсь
+                  </h3>
+
+                  <img
+                    src="./images/Rectangle_red.png"
+                    alt="Rectangle red"
+                    class="current-events__description-block--rectangle"
+                  >
+                </div>
+
+                <p class="current-events__description--text">
+                  Національний Художній Музей України
+                  презентує унікальну частину колекції
+                  Градобанку - українське мистецтво другої
+                  половини 1980-1995 років.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="grid grid--tablet">
+            <div class="grid__item grid__item--desktop-1-7">
+              <img
+                src="./images/photos/picture_action2.png"
+                alt="go and come back"
+                class="current-events__image"
+              >
+            </div>
+
+            <div class="grid__item grid__item--desktop-9-12">
+              <div class="current-events__description">
+                <div class="current-events__exhibition">
+                  <p class="current-events__exhibition--text">виставка</p>
+                  <p class="current-events__exhibition--date">26.08-29.11.2019</p>
+                </div>
+
+                <div class="current-events__description-block">
+                  <h3 class="current-events__description-block--title">
+                    І спогади і мрії
+                  </h3>
+
+                  <img
+                    src="./images/Rectangle_red.png"
+                    alt="Rectangle red"
+                    class="current-events__description-block--rectangle"
+                  >
+                </div>
+
+                <p class="current-events__description--text">
+                  Національний художній музей України
+                  до 100 річчя від дня народження видатної
+                  української художниці Тетяни Яблонської
+                  відкриває ретроспективну ювілейну виставку
+                  «І спогади і мрії».
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="classicism-to-romanticism">
+        <div class="container__classicism-to-romanticism">
+          <div class="classicism-to-romanticism__lecture-block">
+            <div class="classicism-to-romanticism__lecture-date">
+              <p class="classicism-to-romanticism__lecture-date--text">
+                ЛЕКЦІЯ
+              </p>
+
+              <p class="classicism-to-romanticism__lecture-date--time">
+                26/08/2019 - 11:00
+              </p>
+            </div>
+
+            <div class="classicism-to-romanticism__lecture-block--text">
+                Від класицизму до романтизму
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="galery" id="galery">
+        <div class="container__galery">
+          <h2 class="galery__title">Галерея</h2>
+
+          <div class="grid grid--desktop galery__images">
+            <div class=" grid__item grid__item--desktop-1-4 galery__images--block">
+              <img
+                src="./images/photos/galery1.png"
+                  alt="picture1"
+                  class="galery__images--image"
+              >
+            </div>
+
+            <div class="grid__item galery__images--block">
+              <img
+                  src="./images/photos/galery5.png"
+                  alt="galery5"
+                  class="galery__images--image"
+                >
+            </div>
+
+            <div class="grid__item grid__item--desktop-5-12 galery__images--block">
+              <img
+                  src="./images/photos/galery2.png"
+                  alt="picture3"
+                  class="galery__images--image"
+              >
+            </div>
+
+            <div class="grid__item grid__item--desktop-1-8 galery__images--block galery__images--invisible">
+              <img
+                src="./images/photos/galery3.png"
+                alt="picture3"
+                class="galery__images--image"
+              >
+            </div>
+
+            <div class=" grid__item grid__item--desktop-9-12 galery__images--block">
+              <img
+                src="./images/photos/galery4.png"
+                alt="picture4"
+                class="galery__images--image"
+              >
+            </div>
+          </div>
+
+          <div class="galery__scroll">
+            <img src="./images/Group 17.8.png" alt="scroll">
+          </div>
+
+        </div>
+      </section>
+
+      <section class="subscription">
+        <div class="container">
+          <h2 class="subscription__title">
+            Підписка
+          </h2>
+
+          <div class="subscription__block">
+            <p class="subscription__block--text">
+              Бути в курсі всіх актуальних подій та останніх новин.
+            </p>
+
+            <form action="/"
+              method="get"
+              onsubmit="this.reset(); return false;"
+              class="subscription__sendform"
+            >
+              <input
+                type="email"
+                class="subscription__email"
+                name="email"
+                placeholder="E-mail"
+                required
+              >
+
+              <button class="subscription__button" type="submit">
+                <img
+                  src="./images/Vector_subscription.png"
+                  alt="vector"
+                  class="subscription__button--vector"
+                >
+              </button>
+            </form>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <div class="container">
+        <div class="footer__container">
+          <div class="footer__block-logo">
+            <a href="#home">
+              <img src="./images/footer_logo.png" alt="logo">
+            </a>
+
+            <div class="footer__messengers">
+              <a href="https://www.facebook.com/namu.museum/?locale=uk_UA">
+                <img src="./images/Facebook.svg" alt="Facebook">
+              </a>
+              <a href="https://www.instagram.com/namu.museum/">
+                <img src="./images/instagram (3).svg" alt="instagram">
+              </a>
+            </div>
+          </div>
+
+          <div class="footer__block">
+            <div class="footer__working-time">
+              <div class="footer__opening-horse">
+                <p class="footer__opening-horse--title">
+                  Графік роботи
+                </p>
+
+                <ul class="footer__opening-horse--text">
+                  <li>
+                    <span class="footer__opening-horse--bold">
+                      12:00 — 20:00
+                    </span>
+                    середа
+                  </li>
+
+                  <li>
+                    <span class="footer__opening-horse--bold">
+                      12:00 — 20:00
+                    </span>
+                    четвер
+                  </li>
+
+                  <li>
+                    <span class="footer__opening-horse--bold">
+                      12:00 — 20:00
+                    </span>
+                    п’ятниця
+                  </li>
+
+                  <li>
+                    <span class="footer__opening-horse--bold">
+                      11:00 — 19:00
+                    </span>
+                    субота
+                  </li>
+
+                  <li>
+                    <span class="footer__opening-horse--bold">
+                      11:00 — 19:00
+                    </span>
+                    неділя
+                  </li>
+                </ul>
+
+                <p class="footer__opening-horse--free-time">
+                  <span class="footer__opening-horse--bold">
+                    Вихідні:
+                  </span>
+                  понеділок, вівторок
+                  <br>
+                  Каса припиняє роботу за 1 годину до
+
+                  закриття музею
+                </p>
+              </div>
+
+              <div class="footer__contacts" id="contacts">
+                <p class="footer__contacts--title">
+                  Контакти:
+                </p>
+                <div class="footer__contacts--text">
+                  <a
+                    href="https://goo.gl/maps/gbikhhXP95ZEQSZw7"
+                    class="link__footer"
+                  >
+                    вул. М. Грушевського, 6;
+                    Київ, 01001
+                  </a>
+                  <br>
+                  <a href="tel:+38(044)278-13-57" class="link__footer">
+                    тел. +38 (044)278-13-57
+                    <br>
+                    факс +38 (044)278-74-54
+                  </a>
+                  <br>
+                  <a href="mailto:info@namu.kiev.ua" class="link__footer">
+                    e-mail: info@namu.kiev.ua
+                  </a>
+                </div>
+              </div>
+            </div>
+
+            <div class="footer__line"></div>
+
+            <div class="footer__about">
+              <div class="footer__galery ">
+                <a href="#galery" class="link__footer">
+                  Галерея
+                </a>
+
+                <a href="#events" class="link__footer">
+                  Виставки та події
+                </a>
+              </div>
+
+              <div class="footer__contact">
+                <a href="https://en.wikipedia.org/wiki/National_Art_Museum_of_Ukraine"
+                  class="link__footer"
+                >
+                  Про Нас
+                </a>
+
+                <a href="#contacts" class="link__footer">
+                  Контакти
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <a id="button" class="footer__scroll-to-Top">
+          <img src="./images/Ellips_up.svg" alt="Scroll to Top">
+        </a>
+
+        <div class="footer__copyright">
+          <div class="footer__copyright--text">
+            Copyright © 2019. All Rights Reserved.
+          </div>
+          
+          <div class="footer__copyright--text">
+            Designed by Zhyriada Marina
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
