--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
 
   <body class="page__body">
     <header class="page__section header">
-      <div class="container">
+      <div class="container__header">
         <div class="header__top-content">
           <div class="header__icon">
             <a href="#menu">
@@ -58,7 +58,7 @@
               <div class="header__tickets">
                 КВИТКИ
               </div>
-              <a href="#" class="header__button">
+              <a href="#events" class="header__button">
                 <img
                   src="./images/Vector.png"
                   alt="vector"
@@ -66,6 +66,11 @@
                 >
               </a>
             </div>
+            <div class="header__events">
+              ПОДІЇ
+              <div class="header__events--line"></div>
+            </div>
+
           </div>
         </div>
       </div>
@@ -484,7 +489,7 @@
           <div class="footer__copyright--text">
             Copyright © 2019. All Rights Reserved.
           </div>
-          
+
           <div class="footer__copyright--text">
             Designed by Zhyriada Marina
           </div>
