subscription block was created

--- a/src/index.html
+++ b/src/index.html
@@ -13,40 +13,34 @@
     <link rel="icon" href="./images/logo.svg">
     <link rel="stylesheet" href="./styles/main.scss">
 
-    <script type="text/javascript" src="scripts/main.js"></script>
+    <script src="scripts/main.js" defer></script>
   </head>
 
   <body class="page__body">
     <header class="header">
-      <div class="container">
-        <div class="top-action">
-          <a href="#menu" class="icon icon--menu"></a>
-
-          <a href="#" class="logo">
-            <img 
-              class="logo__image"
-              src="./images/logo.svg"
-              alt="museum">
-          </a>
-        </div>
-      </div>
+      <a href="#" class="logo">
+        <img 
+          class="logo__image"
+          src="./images/logo.svg"
+          alt="museum">
+      </a>
     </header>
+
+    <a href="#menu" class="icon icon--menu"></a>
 
     <nav class="page__menu menu" id="menu">
       <div class="container">
         <div class="menu__content">
-          <div class="top-action">
-            <a href="#" class="icon icon--close"></a>
-          </div>
+          <a href="#" class="icon icon--close"></a>
 
           <ul class="menu__list">
             <div class="menu__item">
               <li class="menu__li">
-                <a href="#galery" class="menu__link">Галерея</a>
+                <a href="#gallery" class="menu__link">Галерея</a>
               </li>
             
               <li class="menu__li">
-                <a href="#about-us" class="menu__link">Про Hac</a>
+                <a href="#subscription" class="menu__link">Про Hac</a>
               </li>
             </div>
 
@@ -112,7 +106,7 @@
         </h1>
   
         <div class="button button__positional">
-          <a href="#" class="button__text">квитки</a>
+          <a href="#events" class="button__text">квитки</a>
         </div>
 
         <div class="museum__positional">
@@ -222,7 +216,7 @@
         </div>
       </section>
 
-      <section class="gallery">
+      <section class="gallery" id="gallery">
         <div class="container">
           <h2 class="gallery__title">
             Галерея
@@ -268,12 +262,12 @@
                 </div>
               </div>
             </div>
-            <div class="swiper-pagination"></div>
+            <!-- <div class="swiper-pagination"></div> -->
           </div>
         </div>
       </section>
 
-      <section class="subscription">
+      <section class="subscription" id="subscription">
         <h2 class="subscription__title">Підписка</h2>
 
         <p class="subscription__subtitle">
@@ -282,13 +276,21 @@
           подій та останніх новин.
         </p>
 
-        <form action="#" class="subscription__form">
-          <input 
-            type="email"
-            placeholder="E-mail" 
-            class="subscription__button"
+        <div class="subscription__positional">
+          <form 
+            action="#"
+            method="get" 
+            class="subscription__form"
           >
-        </form>
+            <input 
+              type="email"
+              placeholder="E-mail"
+              class="subscription__button"
+              required
+            >
+            <button class="subscription__sqaure" type="submit"></button>
+          </form>
+        </div>
       </section>
     </main>
   </body>
