--- a/src/index.html
+++ b/src/index.html
@@ -100,6 +100,7 @@
             <div class="menu__about">
               <a href="https://en.wikipedia.org/wiki/National_Art_Museum_of_Ukraine"
               class="link"
+              target="_blank"
               >
                 Про Нас
               </a>
@@ -362,10 +363,16 @@
             </a>
 
             <div class="footer__messengers">
-              <a href="https://www.facebook.com/namu.museum/?locale=uk_UA">
+              <a
+                href="https://www.facebook.com/namu.museum/?locale=uk_UA"
+                target="_blank"
+              >
                 <img src="./images/Facebook.svg" alt="Facebook">
               </a>
-              <a href="https://www.instagram.com/namu.museum/">
+              <a
+                href="https://www.instagram.com/namu.museum/"
+                target="_blank"
+              >
                 <img src="./images/instagram (3).svg" alt="instagram">
               </a>
             </div>
@@ -435,6 +442,7 @@
                   <a
                     href="https://goo.gl/maps/gbikhhXP95ZEQSZw7"
                     class="link__footer"
+                    target="_blank"
                   >
                     вул. М. Грушевського, 6;
                     Київ, 01001
@@ -469,6 +477,7 @@
               <div class="footer__contact">
                 <a href="https://en.wikipedia.org/wiki/National_Art_Museum_of_Ukraine"
                   class="link__footer"
+                  target="_blank"
                 >
                   Про Нас
                 </a>
