--- a/src/index.html
+++ b/src/index.html
@@ -451,6 +451,9 @@
                   <a href="tel:+38(044)278-13-57" class="link__footer">
                     тел. +38 (044)278-13-57
                     <br>
+                  </a>
+                  
+                  <a href="tel:+38(044)278-74-54" class="link__footer">
                     факс +38 (044)278-74-54
                   </a>
                   <br>
