--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,6 @@
       rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script type="text/javascript" src="scripts/main.js"></script>
-
-
   </head>
 
   <body class="page__body">
@@ -26,7 +24,7 @@
       <div class="container__header">
         <div class="header__top-content">
           <div class="header__icon">
-            <a href="#menu">
+            <a href="#menu" class="header__menu">
               <img
                 src="./images/menu.svg"
                 alt="menu"
@@ -79,7 +77,7 @@
     <nav class="page__menu menu" id="menu">
       <div class="container">
         <div class="menu__box">
-          <div class="menu__closed">
+          <div class="menu__closed" id="closed">
             <a href="#">
               <img
                 src="./images/menu_closed.png"
@@ -98,9 +96,10 @@
             </div>
 
             <div class="menu__about">
-              <a href="https://en.wikipedia.org/wiki/National_Art_Museum_of_Ukraine"
-              class="link"
-              target="_blank"
+              <a
+                href="https://en.wikipedia.org/wiki/National_Art_Museum_of_Ukraine"
+                class="link"
+                target="_blank"
               >
                 Про Нас
               </a>
@@ -121,7 +120,7 @@
               <ul class="menu__opening-horse--text">
                 <li>
                   <span class="menu__opening-horse--bold">12:00 — 20:00</span>
-                   середа
+                  середа
                 </li>
 
                 <li>
@@ -136,7 +135,7 @@
 
                 <li>
                   <span class="menu__opening-horse--bold">11:00 — 19:00</span>
-                   субота
+                  субота
                 </li>
 
                 <li>
@@ -452,7 +451,7 @@
                     тел. +38 (044)278-13-57
                     <br>
                   </a>
-                  
+
                   <a href="tel:+38(044)278-74-54" class="link__footer">
                     факс +38 (044)278-74-54
                   </a>
