--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
   </head>
 
   <body class="page__body">
-    <header class="page__section header">
+    <header class="page__section header" id="header">
       <div class="container__header">
         <div class="header__top-content">
           <div class="header__icon">
@@ -357,7 +357,7 @@
       <div class="container">
         <div class="footer__container">
           <div class="footer__block-logo">
-            <a href="#home">
+            <a href="#header">
               <img src="./images/footer_logo.png" alt="logo">
             </a>
 
