--- a/src/index.html
+++ b/src/index.html
@@ -75,7 +75,7 @@
     </header>
 
     <nav class="page__menu menu" id="menu">
-      <div class="container">
+      <div class="container__menu">
         <div class="menu__box">
           <div class="menu__closed" id="closed">
             <a href="#">
