--- a/src/index.html
+++ b/src/index.html
@@ -52,23 +52,22 @@
               <br>
               МУЗЕЙ
             </h1>
-            <div class="header__sendform">
+            <a href="#events" class="header__sendform">
               <div class="header__tickets">
                 КВИТКИ
               </div>
-              <a href="#events" class="header__button">
+              <div  class="header__button">
                 <img
                   src="./images/Vector.png"
                   alt="vector"
                   class="header__button--vector"
                 >
-              </a>
-            </div>
+              </div>
+            </a>
             <div class="header__events">
               ПОДІЇ
               <div class="header__events--line"></div>
             </div>
-
           </div>
         </div>
       </div>
