--- a/src/index.html
+++ b/src/index.html
@@ -364,12 +364,14 @@
               <a
                 href="https://www.facebook.com/namu.museum/?locale=uk_UA"
                 target="_blank"
+                class="footer__messengers--link"
               >
                 <img src="./images/Facebook.svg" alt="Facebook">
               </a>
               <a
                 href="https://www.instagram.com/namu.museum/"
                 target="_blank"
+                class="footer__messengers--link"
               >
                 <img src="./images/instagram (3).svg" alt="instagram">
               </a>
